--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
       <version>1.18.8</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.hive</groupId>
+      <artifactId>hive-exec</artifactId>
+      <version>1.2.1</version>
+    </dependency>
   </dependencies>
 
   <build>
